# cecilia-core

./: .gitignore  README.md  main.py  model.py  pyproject.toml  stt.py  tst.py
app/: api.py  main.py
app/api/: __init__.py  router.py
app/api/routes/: testes.py  transcribe.py
app/core/: __init__.py  assistant.py  audio_recorder.py  configs.py  constrants.py  events.py  gen_engine.py  llm_engine.py  queues.py  transcriber.py  voice_generator.py
app/core/groq/: llm.py  stt.py
app/features/assistant/: brain.py  client.py  routes.py  service.py
app/integrations/audio/: client.py  recorder.py  routes.py  vad.py  wake_word.py
app/integrations/azure/: configs.py  stt.py  tts.py
app/integrations/groq/: client.py  llm.py  stt.py  tts.py
