[project]
name = "jarvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "groq[aiohttp]>=1.1.2",
    "numpy>=2.4.3",
    "python-dotenv>=1.2.2",
    "setuptools>=70.2.0",
    "silero-vad>=6.2.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
]
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
