[project]
name = "Lume"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "azure-cognitiveservices-speech>=1.49.1",
    "fastapi[standard]>=0.115.0",
    "groq[aiohttp]>=1.1.2",
    "python-dotenv>=1.2.2",
]
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
